test/cli/no-valid-instantiation/no-valid-instantiation.out
test/cli/no-valid-instantiation/no-valid-instantiation.rb:40: Could not find valid instantiation of type parameters for `Object#dispatch_call_fail` https://srb.help/7020
    40 |dispatch_call_fail(f, 0) # error: Could not find valid instantiation of type parameters
        ^^^^^^^^^^^^^^^^^^^^^^^^
    test/cli/no-valid-instantiation/no-valid-instantiation.rb:26: `Object#dispatch_call_fail` defined here
    26 |def dispatch_call_fail(f, x)
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  Found no solution for these constraints:
    `Integer(0)` must be a subtype of `T.type_parameter(:U)` which must be a subtype of `String`

test/cli/no-valid-instantiation/no-valid-instantiation.rb:67: Could not find valid instantiation of type parameters for `Object#solve_constraint_fail` https://srb.help/7020
    67 |solve_constraint_fail(f) do # error: Could not find valid instantiation of type parameters for `Object#solve_constraint_fail`
    68 |  0
    69 |end
    test/cli/no-valid-instantiation/no-valid-instantiation.rb:59: `Object#solve_constraint_fail` defined here
    59 |def solve_constraint_fail(f, &blk)
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  Found no solution for these constraints:
    `Integer(0)` must be a subtype of `T.type_parameter(:U)` which must be a subtype of `String`
Errors: 2
